==> seryoni/nrf52-circleci-example/winc1500/bsp/source/nm_bsp_nrf52832.c <==
/**
 *
 * \file
 *
 * \brief This module contains SAM4S BSP APIs implementation.
 *
 * Copyright (c) 2016-2017 Atmel Corporation. All rights reserved.
 *
 * \asf_license_start
 *
 * \page License
 *
 * Redistribution and use in source and binary forms, with or without
 * modification, are permitted provided that the following conditions are met:
 *
 * 1. Redistributions of source code must retain the above copyright notice,
 *    this list of conditions and the following disclaimer.
 *
 * 2. Redistributions in binary form must reproduce the above copyright notice,
 *    this list of conditions and the following disclaimer in the documentation
 *    and/or other materials provided with the distribution.
 *
 * 3. The name of Atmel may not be used to endorse or promote products derived
 *    from this software without specific prior written permission.
 *
 * THIS SOFTWARE IS PROVIDED BY ATMEL "AS IS" AND ANY EXPRESS OR IMPLIED
 * WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED WARRANTIES OF
 * MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NON-INFRINGEMENT ARE
 * EXPRESSLY AND SPECIFICALLY DISCLAIMED. IN NO EVENT SHALL ATMEL BE LIABLE FOR
 * ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL
 * DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS
 * OR SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION)
 * HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT,
 * STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN
 * ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE
 * POSSIBILITY OF SUCH DAMAGE.
 *
 * \asf_license_stop
 *
 */

#include "nm_bsp.h"
#include "nm_common.h"
#include "nrf_drv_gpiote.h"
#include "nrf_gpio.h"
#include "nrf_delay.h"
#include "boards.h"

// #include "asf.h"
#include "conf_winc.h"

static tpfNmBspIsr gpfIsr;

// static void chip_isr(uint32_t id, uint32_t mask)
// {
// 	if ((id == CONF_WINC_SPI_INT_PIO_ID) && (mask == CONF_WINC_SPI_INT_MASK)) {
// 		if (gpfIsr) {
// 			gpfIsr();
// 		}
// 	}
// }

static void chip_isr(nrf_drv_gpiote_pin_t pin_number, nrf_gpiote_polarity_t polarity)
{
	if (pin_number == CONF_WINC_SPI_INT_PIO_ID) {
		if (gpfIsr) {
			gpfIsr();
		}
	}
}

/**
 *	@fn		nm_bsp_reset
 *	@brief	Reset NMC1500 SoC by setting CHIP_EN and RESET_N signals low,
 *           CHIP_EN high then RESET_N high
 */
void nm_bsp_reset(void)
{
	nrf_gpio_pin_clear(CONF_WINC_SPI_CS_GPIO); // YANIV


	nrf_gpio_pin_clear(CONF_WINC_PIN_CHIP_ENABLE);
	nrf_gpio_pin_clear(CONF_WINC_PIN_RESET);
	nm_bsp_sleep(1);
	nrf_gpio_pin_set(CONF_WINC_PIN_CHIP_ENABLE);
	nm_bsp_sleep(10);
	nrf_gpio_pin_set(CONF_WINC_PIN_RESET);
	
	// YANIV
	nm_bsp_sleep(10);
	nrf_gpio_pin_set(CONF_WINC_SPI_CS_GPIO);
	nm_bsp_sleep(5);
	nrf_gpio_pin_clear(CONF_WINC_SPI_CS_GPIO);
}

static void config_output(uint32_t pin_number) {
	nrf_gpio_cfg(
			pin_number,
			NRF_GPIO_PIN_DIR_OUTPUT,
			NRF_GPIO_PIN_INPUT_DISCONNECT,
			NRF_GPIO_PIN_PULLUP,
			NRF_GPIO_PIN_S0S1,
			NRF_GPIO_PIN_NOSENSE
	);
}

/*
 *	@fn		init_chip_pins
 *	@brief	Initialize reset, chip enable and wake pin
 */
static void init_chip_pins(void)
{	
	config_output(CONF_WINC_PIN_RESET);
	nrf_gpio_pin_set(CONF_WINC_PIN_RESET);
	config_output(CONF_WINC_PIN_CHIP_ENABLE);
	nrf_gpio_pin_set(CONF_WINC_PIN_CHIP_ENABLE);
	config_output(CONF_WINC_PIN_WAKE);
	nrf_gpio_pin_set(CONF_WINC_PIN_WAKE);

	nrf_gpio_cfg_output(CONF_WINC_SPI_CS_GPIO);

// #ifdef __SAM4SD32C__
// 	pio_configure_pin(CONF_WINC_PIN_RESET, PIO_TYPE_PIO_OUTPUT_0|PIO_PULLUP);
// 	pio_configure_pin(CONF_WINC_PIN_CHIP_ENABLE, PIO_TYPE_PIO_OUTPUT_0|PIO_PULLUP);
// 	pio_configure_pin(CONF_WINC_PIN_WAKE, PIO_TYPE_PIO_OUTPUT_0|PIO_PULLUP);
// 	pio_configure_pin(CONF_WINC_SPI_CS_GPIO, PIO_DEFAULT|PIO_PULLUP);
// 	pio_set_pin_high(CONF_WINC_SPI_CS_GPIO);
// #else
// 	pio_configure_pin(CONF_WINC_PIN_RESET, PIO_TYPE_PIO_OUTPUT_0);
// 	pio_configure_pin(CONF_WINC_PIN_CHIP_ENABLE, PIO_TYPE_PIO_OUTPUT_0);
// 	pio_configure_pin(CONF_WINC_PIN_WAKE, PIO_TYPE_PIO_OUTPUT_0);
// #endif
}


/*
*	@fn		nm_bsp_init
*	@brief	Initialize BSP
*	@return	0 in case of success and -1 in case of failure
*/
sint8 nm_bsp_init(void)
{
	gpfIsr = NULL;

	/* Initialize chip IOs. */
	init_chip_pins();

    /* Make sure a 1ms Systick is configured. */
    // if (!(SysTick->CTRL & SysTick_CTRL_ENABLE_Msk && SysTick->CTRL & SysTick_CTRL_TICKINT_Msk)) {
	// 	delay_init();
    // }

	/* Perform chip reset. */
	nm_bsp_reset();

	return 0;
}

/**
*   @fn      nm_bsp_deinit
*   @brief   De-iInitialize BSP
*   @return  0 in case of success and -1 in case of failure
*/
sint8 nm_bsp_deinit(void)
{
	nrf_gpio_pin_clear(CONF_WINC_PIN_CHIP_ENABLE);
	nrf_gpio_pin_clear(CONF_WINC_PIN_RESET);
	return M2M_SUCCESS;
}

/*
*	@fn		nm_bsp_sleep
*	@brief	Sleep in units of mSec
*	@param[IN]	u32TimeMsec
*				Time in milliseconds
*/
void nm_bsp_sleep(uint32 u32TimeMsec)
{
	nrf_delay_ms(u32TimeMsec);
}

/*
*	@fn		nm_bsp_register_isr
*	@brief	Register interrupt service routine
*	@param[IN]	pfIsr
*				Pointer to ISR handler
*/
void nm_bsp_register_isr(tpfNmBspIsr pfIsr)
{
	uint32_t err_code;
	if (!nrf_drv_gpiote_is_init())
    {
        err_code = nrf_drv_gpiote_init();
        APP_ERROR_CHECK(err_code);
    }
	gpfIsr = pfIsr;

	nrf_gpio_cfg_sense_input(CONF_WINC_SPI_INT_PIO_ID, NRF_GPIO_PIN_PULLUP, NRF_GPIO_PIN_SENSE_LOW);
	const nrf_drv_gpiote_in_config_t config = {
		.is_watcher = false,
        .hi_accuracy = false,
        .pull = NRF_GPIO_PIN_PULLUP,
        .sense = NRF_GPIOTE_POLARITY_HITOLO
    };
	err_code = nrf_drv_gpiote_in_init(CONF_WINC_SPI_INT_PIO_ID, &config, chip_isr);
	APP_ERROR_CHECK(err_code);

	nrf_drv_gpiote_in_event_enable(CONF_WINC_SPI_INT_PIO, true);

// 	/* Configure PGIO pin for interrupt from SPI slave, used when slave has data to send. */
// 	sysclk_enable_peripheral_clock(CONF_WINC_SPI_INT_PIO_ID);
// 	pio_configure_pin(CONF_WINC_SPI_INT_PIN, PIO_TYPE_PIO_INPUT);
// 	pio_pull_up(CONF_WINC_SPI_INT_PIO, CONF_WINC_SPI_INT_MASK, PIO_PULLUP);
// //	pio_set_debounce_filter(CONF_WINC_SPI_INT_PIO, CONF_WINC_SPI_INT_MASK, 10);
// 	pio_handler_set_pin(CONF_WINC_SPI_INT_PIN, PIO_IT_LOW_LEVEL, chip_isr);
// 	pio_get_interrupt_status(CONF_WINC_SPI_INT_PIO);
// 	pio_enable_interrupt(CONF_WINC_SPI_INT_PIO, CONF_WINC_SPI_INT_MASK);
// 	pio_handler_set_priority(CONF_WINC_SPI_INT_PIO, (IRQn_Type)CONF_WINC_SPI_INT_PIO_ID,
// 			CONF_WINC_SPI_INT_PRIORITY);
}

/*
*	@fn		nm_bsp_interrupt_ctrl
*	@brief	Enable/Disable interrupts
*	@param[IN]	u8Enable
*				'0' disable interrupts. '1' enable interrupts
*/
void nm_bsp_interrupt_ctrl(uint8 u8Enable)
{
	if (u8Enable > 0) {
		nrf_drv_gpiote_in_event_enable(CONF_WINC_SPI_INT_PIO, true);
	} else {
		nrf_drv_gpiote_in_event_disable(CONF_WINC_SPI_INT_PIO);
	}
}
